# mimicry_openvr

./: CMakeLists.txt  README  README.md  package.xml
include/mimicry_openvr/: mimicry_app.hpp  param_info.hpp  updated_params.hpp
launch/: configure_controller.launch  mimicry_openvr.launch
param_files/: dual_vives.json  params.json  vive_params.json
src/: mimicry_app.cpp  mimicry_control.cpp  param_writer.cpp  updated_params.cpp
